# Utilitario_ventas_nc

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt  usuarios.json  web.py
src/sap_report/: __main__.py  bootstrap.py  main.py
src/sap_report/application/: __init__.py  email_templates.py  payment_options.py  report_service.py
src/sap_report/infrastructure/: __init__.py  config.py
src/sap_report/infrastructure/db/: __init__.py  _base.py  mysql.py  postgres.py  repository.py  sap_hana.py  sl_repository.py
src/sap_report/infrastructure/db/queries/: ValidacionNC.sql  ValidacionNCArticulos.sql  Validar_pagos_sap.sql  datos_factura_sap.sql  datos_pago_pg.sql  enviar_movimiento_por_enviar.sql  prestamo_logproceso.sql  prestamo_logproceso_dev.sql  prestamo_stock.sql  prestamo_trani.sql  revisar_hilos.sql  validar_articulos.sql  validar_igv_mysql_items.sql  validar_igv_sap.sql  validar_igv_update_hilos.sql
src/sap_report/infrastructure/email/: __init__.py  smtp_mailer.py
src/sap_report/infrastructure/export/: __init__.py  excel_writer.py
src/sap_report/ui/: __init__.py  tkinter_app.py
src/sap_report/web/: app.py  auth.py
src/sap_report/web/templates/: admin_usuarios.html  base.html  consultar_pago_sap.html  correo.html  ejecutar_reporte.html  enviar_pago_sap.html  index.html  login.html  orden_pago.html  pagos.html  por_enviar.html  prestamo.html  probar_conexiones.html  revisar_hilos.html  validacion_nubefact.html  validar_articulos.html  validar_igv.html  validar_pagos.html
tests/unit/: test_validar_pagos.py
(+11 files in other folders)
