[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-report"
version = "0.1.0"
description = "Desktop report runner for SAP queries"
requires-python = ">=3.11"
dependencies = [
  "flask",
  "pandas",
  "openpyxl",
  "psycopg2-binary",
  "hdbcli",
  "pymysql",
  "python-dotenv",
  "requests",
]

[project.scripts]
sap-report = "sap_report.web.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
